@@ -1,3 +1,8 @@
+2011-10-26  Norbert Preining  <preining@logic.at>
+
+	* updmap.pl: apply patch from ptexlive Tsuchimura to support
+	kanjiEmbed setting, and generate kanjix.map.
+
 2011-09-09  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Adapt to script_links.am using relpath.
